# horsesea.men

./: CNAME  Cargo.toml  README.md  index.html
.github/workflows/: deploy.yml  static.yml
assets/: styles.scss
editions/: why2025.html
src/: lib.rs  main.rs
src/routes/: editions.rs  home.rs  mod.rs
