[package]
name = "horsesea-men"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.100"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"

[profile.release]
lto = true
opt-level = "z"
strip = true
codegen-units = 1
panic = "abort"
